added 'Importacao'  country/category lookup info, w/ and w/out year calls
